# event-driven-datalake-pipeline

./: .gitignore  README.md  TECHNICAL_SPEC.md  requirements.md
.github/workflows/: example-deploy-iac-dev.yml
athena-queries/: daily_ridership_summary.sql  top_routes_weekly.sql
athena-sample-queries/: daily_ridership_summary.sql  outliers.sql  top_routes_weekly.sql
docs/: VERIFICATION.md
glue-scripts/: README.md  pyproject.toml
glue-scripts/src/: gold_aggregation.py  silver_processing.py
glue-scripts/tests/: conftest.py  test_gold_aggregation.py  test_silver_processing.py
sample-data/: dim_routes.csv  dim_vehicles.csv  sample_city_transit_trips.csv
stepFunctions/: transit_pipeline_sfn.asl
terraform/environments/dev/: _globals.tf  _root.tf  backend-shared.tfvars
terraform/environments/dev/us-east-1/bootstrap/: main.tf  outputs.tf
terraform/environments/dev/us-east-1/monitoring/: alarms.tf  data.tf  locals.tf
terraform/environments/dev/us-east-1/pipeline/: _globals.tf  athena.tf  crawlers.tf  data.tf  glue_jobs.tf  locals.tf  main.tf  outputs.tf  pipeline_sfn.tf
terraform/environments/dev/us-east-1/security/: data.tf  iam_eb.tf  iam_glue.tf  iam_pipe.tf  iam_sfn.tf  kms.tf  locals.tf  outputs.tf
terraform/environments/dev/us-east-1/storage/: .terraform.lock.hcl  _root.tf  catalog.tf  data.tf  locals.tf  outputs.tf  rds.tf  s3.tf  sqs.tf
